--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="title" content="Xe Tải Ghép Hàng Đà Nẵng Quảng Nam - Vận tải Dũng Ánh">
+		<meta name="title" content="Xe Tải Ghép Hàng Đà Nẵng Nam Phước Hội An Thăng Bình Tam Kỳ Núi Thành - Vận tải Tư Nhân">
     	<meta name="description" content="Dịch vụ xe tải ghép hàng tuyến Đà Nẵng - Quảng Nam giá rẻ, an toàn, uy tín. Liên hệ ngay để nhận báo giá vận chuyển nhanh nhất.">
     	<meta name="keywords" content="Xe tải ghép hàng Đà Nẵng Quảng Nam, xe ghép hàng, vận tải Dũng Ánh, ghép hàng đi Quảng Nam, xe tải ghép Đà Nẵng">
 
     <!-- Open Graph (chia sẻ Facebook, Zalo, v.v.) -->
-    	<meta property="og:title" content="Xe Tải Ghép Hàng Đà Nẵng Quảng Nam - Vận tải Dũng Ánh" />
+    	<meta property="og:title" content="Xe Tải Ghép Hàng Đà Nẵng Nam Phước Hội An Thăng Bình Tam Kỳ Núi Thành - Vận tải Tư Nhân" />
     	<meta property="og:description" content="Dịch vụ xe tải ghép hàng tuyến Đà Nẵng - Quảng Nam nhanh chóng, giá tốt nhất miền Trung." />
     	<meta property="og:image" content="https://ketnoivietnam.com/xetaighepdanangquangnam.png" />
     	<meta property="og:url" content="https://ketnoivietnam.com" />
@@ -20,7 +20,7 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "Vận tải Dũng Ánh - Xe tải ghép hàng Đà Nẵng Quảng Nam",
+      "name": "Vận tải Tư Nhân - Xe tải ghép hàng Đà Nẵng Quảng Nam",
       "image": "https://ketnoivietnam.com/xetaighepdanangquangnam.png",
       "telephone": "0905xxxxxx",
       "address": {
