Cập nhật logo và giao diện index

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17701864947">
+		</script>
+		<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17701864947');
+		</script>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="title" content="Xe Tải Ghép Hàng Đà Nẵng Nam Phước Hội An Thăng Bình Tam Kỳ Núi Thành - Vận tải Tư Nhân">
+		<meta name="title" content="Xe Tải Ghép Hàng Đà Nẵng - Quảng Nam giá tốt nhất thị trường - Vận tải Tư Nhân">
     	<meta name="description" content="Dịch vụ xe tải ghép hàng tuyến Đà Nẵng - Quảng Nam giá rẻ, an toàn, uy tín. Liên hệ ngay để nhận báo giá vận chuyển nhanh nhất.">
     	<meta name="keywords" content="Xe tải ghép hàng Đà Nẵng Quảng Nam, xe ghép hàng, vận tải Dũng Ánh, ghép hàng đi Quảng Nam, xe tải ghép Đà Nẵng">
 
     <!-- Open Graph (chia sẻ Facebook, Zalo, v.v.) -->
-    	<meta property="og:title" content="Xe Tải Ghép Hàng Đà Nẵng Nam Phước Hội An Thăng Bình Tam Kỳ Núi Thành - Vận tải Tư Nhân" />
+    	<meta property="og:title" content="Xe Tải Ghép Hàng Đà Nẵng - Quảng Nam giá tốt nhất thị trường - Vận tải Tư Nhân" />
     	<meta property="og:description" content="Dịch vụ xe tải ghép hàng tuyến Đà Nẵng - Quảng Nam nhanh chóng, giá tốt nhất miền Trung." />
     	<meta property="og:image" content="https://ketnoivietnam.com/xetaighepdanangquangnam.png" />
     	<meta property="og:url" content="https://ketnoivietnam.com" />
@@ -22,7 +32,7 @@
       "@type": "LocalBusiness",
       "name": "Vận tải Tư Nhân - Xe tải ghép hàng Đà Nẵng Quảng Nam",
       "image": "https://ketnoivietnam.com/xetaighepdanangquangnam.png",
-      "telephone": "0905xxxxxx",
+      "telephone": "0906511699",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Đà Nẵng",
