--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 		</script>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="title" content="Xe Tải Ghép Hàng Đà Nẵng - Quảng Nam giá tốt nhất thị trường - Vận tải Tư Nhân">
+		<meta name="title" content="Xe Tải Ghép Hàng Đà Nẵng - Quảng Nam giá rẻ tối ưu chi phí - Gọi Liền Tay">
     	<meta name="description" content="Dịch vụ xe tải ghép hàng tuyến Đà Nẵng - Quảng Nam giá rẻ, an toàn, uy tín. Liên hệ ngay để nhận báo giá vận chuyển nhanh nhất.">
     	<meta name="keywords" content="Xe tải ghép hàng Đà Nẵng Quảng Nam, xe ghép hàng, vận tải Dũng Ánh, ghép hàng đi Quảng Nam, xe tải ghép Đà Nẵng">
 
     <!-- Open Graph (chia sẻ Facebook, Zalo, v.v.) -->
-    	<meta property="og:title" content="Xe Tải Ghép Hàng Đà Nẵng - Quảng Nam giá tốt nhất thị trường - Vận tải Tư Nhân" />
+    	<meta property="og:title" content="Xe Tải Ghép Hàng Đà Nẵng - Quảng Nam giá rẻ tối ưu chi phí - Gọi Liền Tay" />
     	<meta property="og:description" content="Dịch vụ xe tải ghép hàng tuyến Đà Nẵng - Quảng Nam nhanh chóng, giá tốt nhất miền Trung." />
-    	<meta property="og:image" content="https://ketnoivietnam.com/xetaighepdanangquangnam.png" />
+    	<meta property="og:image" content="https://ketnoivietnam.com/xetaighephangdananquanggiare.png" />
     	<meta property="og:url" content="https://ketnoivietnam.com" />
     	<meta property="og:type" content="website" />
     	<meta property="og:locale" content="vi_VN" />
