Cập nhật ảnh xe tải mới và chỉnh lại index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Open Graph (chia sẻ Facebook, Zalo, v.v.) -->
     	<meta property="og:title" content="Xe Tải Ghép Hàng Đà Nẵng - Quảng Nam giá rẻ tối ưu chi phí - Gọi Ngay 0906511699" />
     	<meta property="og:description" content="Dịch vụ xe tải ghép hàng tuyến Đà Nẵng - Quảng Nam nhanh chóng, giá tốt nhất miền Trung." />
-    	<meta property="og:image" content="https://ketnoivietnam.com/xeghepdanangquangnam1.png" />
+    	<meta property="og:image" content="https://ketnoivietnam.com/ghepdanangquangnam.png" />
     	<meta property="og:url" content="https://ketnoivietnam.com" />
     	<meta property="og:type" content="website" />
     	<meta property="og:locale" content="vi_VN" />
@@ -31,7 +31,7 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "Vận tải Tư Nhân - Xe tải ghép hàng Đà Nẵng Quảng Nam",
-      "image": "https://ketnoivietnam.com/xeghepdanangquangnam1.png",
+      "image": "https://ketnoivietnam.com/ghepdanangquangnam.png",
       "telephone": "0906511699",
       "address": {
         "@type": "PostalAddress",
